# OpenSwitcher

./: .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  config.h.in~  config.status  configure  configure.ac  configure.scan  configure~  install.sh  main.c  openswitcher  preinstall.sh  tmp
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  postinst  postrm  preinst.ex  prerm  rules
doc/: openswitcher.1  openswitcher.1.in
include/: Makefile  config.h  config.h.in~  header.sh.in
scripts/: checkpkgs.sh  checkpkgs.sh.in  header.sh  header.sh.in  input-device-info.sh  input-device-info.sh.in  install.sh  install.sh.in  installfiles.sh  installfiles.sh.in  installpkgs.sh  openswitcher.sh  openswitcher.sh.in  switchLayout.sh.in  uninstall.sh  uninstall.sh.in
src/: install.sh  main.c  trash.c
src/.deps/: main.Po  openswitcher-main.Po
tests/: checkfiles.sh.in  checkpkgs.sh.in
